--- a/site.yml
+++ b/site.yml
@@ -39,6 +39,10 @@
       git:
         repo: https://github.com/n0nvme/s1mpl3.git
         dest: /home/n0nvme/.config/awesome
+    - name: awesomewm config dependencies
+      git:
+        repo: https://github.com/mut-ex/awesome-wm-nice.git
+        dest: /home/n0nvme/.config/awesomewm/nice
 - name: other files
   hosts: 127.0.0.1
   gather_facts: false
