--- a/site.yml
+++ b/site.yml
@@ -39,10 +39,14 @@
       git:
         repo: https://github.com/n0nvme/s1mpl3.git
         dest: /home/n0nvme/.config/awesome
-    - name: awesomewm config dependencies
+    - name: awesomewm nice
       git:
         repo: https://github.com/mut-ex/awesome-wm-nice.git
         dest: /home/n0nvme/.config/awesomewm/nice
+    - name: awesomewm awesome-wm-widgets
+      git:
+        repo: https://github.com/streetturtle/awesome-wm-widgets.git
+        dest: /home/n0nvme/.config/awesomewm/awesome-wm-widgets
 - name: other files
   hosts: 127.0.0.1
   gather_facts: false
