update packages list && migrate from i3lock-color to xsecurelock

--- a/vars.yml
+++ b/vars.yml
@@ -3,16 +3,14 @@ pacman:
   - xorg-server
   - xorg-xinit
   - xorg-xrandr
+  - xsecurelock
 
   # daemons
   - networkmanager
-  - docker
   - blueman
   - pulseaudio
 
   # cli's
-  - podman
-  - docker-compose
   - dialog
   - xdotool
   - wmctrl
@@ -23,11 +21,16 @@ pacman:
   - unzip
   - tar
   - smartmontools
-  - kubectl
-  - kubectx
   - acpi
   - exa
   - fzf
+  - arch-audit
+
+  # containers
+  - podman
+  - docker-compose
+  - kubectl
+  - kubectx
 
   # gui's
   - telegram-desktop
@@ -44,7 +47,6 @@ pacman:
   - network-manager-applet
 
   # other
-  - gnome-keyring
   - fuse-overlayfs
   - libsecret
   - openssh
@@ -63,7 +65,6 @@ pacman:
 aur:
   # graphics
   - awesome-git
-  - i3lock-color
   - picom-git
 
   # other
