--- a/roles/systemd/files/suspend@.service
+++ b/roles/systemd/files/suspend@.service
@@ -6,7 +6,7 @@ Before=sleep.target
 User=%I
 Type=forking
 Environment=DISPLAY=:0
-ExecStart=xsecurelock
+ExecStart=/home/n0nvme/.config/awesome/lock.sh
 
 [Install]
 WantedBy=sleep.target
