fix systemd dir path

--- a/roles/systemd/tasks/main.yml
+++ b/roles/systemd/tasks/main.yml
@@ -10,7 +10,7 @@
     name: suspend@n0nvme
   become: true
 - name: Ensure .config/systemd/user/ dir exists
-  file: path=.config/systemd/user/ state=directory
+  file: path=/home/n0nvme/.config/systemd/user/ state=directory
 - name: copy ssh-agent service
   copy:
     src: ssh-agent.service
