--- a/roles/systemd/tasks/main.yml
+++ b/roles/systemd/tasks/main.yml
@@ -9,12 +9,13 @@
     enabled: true
     name: suspend@n0nvme
   become: true
+- name: Ensure .config/systemd/user/ dir exists
+  file: path=/home/n0nvme/config/systemd/user/ state=directory
 - name: copy ssh-agent service
   copy:
     src: ssh-agent.service
-    dest: /etc/systemd/system/ssh-agent.servicee
+    dest: /home/n0nvme/.config/systemd/user/ssh-agent.service
     mode: 0644
-  become: true
 - name: enable suspend service
   ansible.builtin.systemd:
     enabled: true
