add ssh-agent (#11)
* add ssh-agent systemd service

* fix SSH_AUTH_SOCK variable

--- a/site.yml
+++ b/site.yml
@@ -56,7 +56,7 @@
       copy:
         content: |
           picom -b --unredir-if-possible --backend glx --vsync --glx-no-stencil &
-          env SSH_AUTH_SOCK=/run/user/1000/keyring/ssh
+          export SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/ssh-agent.socket"
           onboard &
           nm-applet &
           blueman-applet &
