--- a/packages.yml
+++ b/packages.yml
@@ -4,6 +4,12 @@ pacman:
   - xorg-xinit
   - xorg-xrandr
 
+  # tpm
+  - tpm2-tss
+	- tpm2-abrmd
+	- tpm2-pkcs11
+	- tpm2-tools
+
   # daemons
   - networkmanager
   - docker
