--- a/packages.yml
+++ b/packages.yml
@@ -37,6 +37,7 @@ pacman:
   - fzf
   - powertop
   - upower
+	- difftastic
 
   # gui's
   - telegram-desktop
@@ -94,3 +95,4 @@ aur:
   - code-insiders
   - robo3t-bin
   - mailspring
+  - stoplight-studio-appimage
