--- a/roles/kitty/files/solarized_dark.conf
+++ b/roles/kitty/files/solarized_dark.conf
@@ -8,10 +8,10 @@ selection_foreground #93a1a1
 selection_background #002b36
 # The cursor color
 cursor           #93a1a1
-# The text color
-text             #002b36
-# The cursor opacity
-cursor_opacity   0.7
+# # The text color
+# text             #002b36
+# # The cursor opacity
+# cursor_opacity   0.7
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
 # The color for the border of the active window
