make ansible-lint happy

--- a/roles/kitty/tasks/main.yml
+++ b/roles/kitty/tasks/main.yml
@@ -1,14 +1,14 @@
 - name: Ensure kitty config dir exists
-  file: path=/home/n0nvme/.config/kitty state=directory
+  ansible.builtin.file: path=/home/n0nvme/.config/kitty state=directory mode=0644
 - name: copy kitty config
-  copy:
+  ansible.builtin.copy:
     src: kitty.conf
     dest: /home/n0nvme/.config/kitty/kitty.conf
     mode: 0644
 - name: Ensure kitty themes dir exists
-  file: path=/home/n0nvme/.config/kitty/themes state=directory
+  ansible.builtin.file: path=/home/n0nvme/.config/kitty/themes state=directory mode=0644
 - name: copy kitty theme
-  copy:
+  ansible.builtin.copy:
     src: solarized_dark.conf
     dest: /home/n0nvme/.config/kitty/themes/solarized_dark.conf
     mode: 0644
