--- a/roles/xbindkeys/tasks/main.yml
+++ b/roles/xbindkeys/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: copy zshrc file
-  copy:
+  ansible.builtin.copy:
     src: xbindkeysrc
     dest: /home/n0nvme/.xbindkeysrc
     mode: 0644
