--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: copy zshrc file
-  copy:
+  ansible.builtin.copy:
     src: zshrc
     dest: /home/n0nvme/.zshrc
     mode: 0644
 - name: change user shell to zsh
   become: true
-  user:
+  ansible.builtin.user:
     name: "{{ the_user }}"
     shell: /bin/zsh
