--- a/roles/gtk/tasks/main.yml
+++ b/roles/gtk/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Ensure gtk-3 config dir exists
-  file: path=/home/n0nvme/.config/gtk-3.0 state=directory
+  ansible.builtin.file: path=/home/n0nvme/.config/gtk-3.0 state=directory mode=0644
 - name: copy gtk-3 config
-  copy:
+  ansible.builtin.copy:
     src: settings.ini
     dest: /home/n0nvme/.config/gtk-3.0/settings.ini
     mode: 0644
